[package]
name = "webrobot"
version = "0.1.0"
edition = "2021"

[dependencies]
scraper = { git = "https://github.com/MIPL-group/scraper" }
itertools = "0.10.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_plain = "1.0.1"
regex = "1.6"
dot = { git = "https://github.com/MIPL-group/dot-rust" }
graphviz-rust = "0.5.1"
rand = "0.8.5"
json = "0.12.4"
lazy_static = "1.4.0"
csv = "1.1.6"
ustr = "0.9.0"
rustc-hash = "1.1.0"
smallvec = { version = "1.10.0", features = ["union"] }
im-rc = "15.1.0"
pprof = { version = "0.11.0", default-features = false, features = ["prost-codec", "frame-pointer"] }
internment = "0.7.0"
pest = "2.0"
pest_derive = "2.0"

[dev-dependencies]
serial_test = "0.10.0"

[profile.release]
debug = true

[profile.release-opt]
inherits = "release"
lto = "fat"
codegen-units = 1

[[test]]
name = "main"
path = "tests/benchmarks/main.rs"
